# sol-inner-voices-test

./: Cargo.toml
.zed/: tasks.json
crates/aster/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/game/src/gameplay/: mod.rs  state.rs
crates/game/src/gameplay/battle/: mod.rs
scripting/sol-lang/: Cargo.toml  README.md
scripting/sol-lang/examples/: parser.rs  test.rs
scripting/sol-lang/examples/error/: faulty.sol  main.rs
scripting/sol-lang/examples/project/: main.rs
scripting/sol-lang/src/: lib.rs  main.rs
scripting/sol-lang/src/ast/: mod.rs
scripting/sol-lang/src/introspec/: project.rs
scripting/sol-lang/src/workspace/: build.rs  init.rs  mod.rs
scripting/sol-language-server/: Cargo.toml
scripting/sol-language-server/examples/: Item.sol  bruno_sidequest.sol  hamburger.sol
scripting/sol-language-server/src/: main.rs
scripting/zed-aster/: extension.toml
scripting/zed-aster/grammars/: aster.wasm
scripting/zed-aster/languages/aster/: config.toml  folds.scm  highlights.scm
src/: main.rs
src/gameplay/: mod.rs  state.rs
src/gameplay/battle/: plugin.rs
