[package]
name = "aster"
version = "0.1.0"
edition = "2021"
authors = ["mrpedrobraga <mrhenribraga@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
