[package]
name = "sol-lang"
version = "0.0.1"
edition = "2021"
description = "Sol toolchain and library."
license = "MIT"
authors = ["mrpedrobraga <mrhenribraga@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-sol = "0.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.61"
tree-sitter-highlight = "0.22.6"
clap = { version = "4.5.4", features = ["derive", "unicode"] }
